--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "@walletconnect/web3-provider": "^1.6.6",
         "bignumber.js": "^9.0.1",
         "classnames": "^2.3.1",
+        "moralis": "^1.3.5",
         "node-sass": "^6.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-moralis": "^1.3.2",
         "react-scripts": "^4.0.3",
         "typescript": "^4.5.2",
         "web3": "^1.7.1",
