--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@walletconnect/web3-provider": "^1.6.6",
         "bignumber.js": "^9.0.1",
         "classnames": "^2.3.1",
+        "jsonwebtoken": "^8.5.1",
         "moralis": "^1.3.5",
         "node-sass": "^6.0.1",
         "react": "^17.0.2",
@@ -55,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
