--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-moralis": "^1.3.2",
+        "react-notifications-component": "^3.4.1",
         "react-scripts": "^4.0.3",
         "typescript": "^4.5.2",
         "web3": "^1.7.1",
