--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.5.0",
         "@walletconnect/web3-provider": "^1.6.6",
         "bignumber.js": "^9.0.1",
