--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
     "name": "sendvesudao",
     "version": "0.1.0",
     "private": true,
+    "files": [
+        "jest-preset.js",
+        "metamask",
+        "dist"
+    ],
     "dependencies": {
+        "@chainsafe/dappeteer": "2.3.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.5.0",
         "@walletconnect/web3-provider": "^1.7.4",
         "bn.js": "^5.2.0",
+        "chai": "^4.3.6",
         "classnames": "^2.3.1",
+        "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
         "moralis": "^1.3.5",
         "node-sass": "^6.0.1",
+        "puppeteer": "^13.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-moralis": "^1.3.2",
@@ -26,7 +35,7 @@
     "scripts": {
         "start": "TSC_COMPILE_ON_ERROR=true react-scripts start",
         "build": "TSC_COMPILE_ON_ERROR=true react-scripts build",
-        "test": "react-scripts test",
+        "test": "mocha --require ts-node/register test/*.spec.ts --color --recursive --timeout 60000 --exit",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -58,8 +67,12 @@
         ]
     },
     "devDependencies": {
+        "@types/chai": "^4.3.0",
+        "@types/jest": "^27.4.1",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/mocha": "^9.1.0",
         "@types/node": "^12.0.0",
+        "@types/puppeteer": "^5.4.5",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/web3": "^1.2.2",
@@ -73,6 +86,8 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.3.0"
+        "mocha": "^9.2.2",
+        "prettier": "^2.3.0",
+        "ts-node": "^10.7.0"
     }
 }
