--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
         "classnames": "^2.3.1",
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
-        "moralis": "^1.3.5",
+        "moralis": "^1.5.8",
         "node-sass": "^6.0.1",
         "puppeteer": "^13.5.1",
         "react": "^17.0.2",
+        "react-dev-utils": "12.0.0",
         "react-dom": "^17.0.2",
-        "react-moralis": "^1.3.2",
+        "react-moralis": "^1.3.5",
         "react-notifications-component": "^3.4.1",
         "react-scripts": "^4.0.3",
         "typescript": "^4.5.2",
