--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/material": "^5.5.0",
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
+        "@types/react-modal": "^3.13.1",
         "@walletconnect/web3-provider": "^1.7.4",
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
@@ -27,6 +28,7 @@
         "react": "^17.0.2",
         "react-dev-utils": "12.0.0",
         "react-dom": "^17.0.2",
+        "react-modal": "^3.15.1",
         "react-moralis": "^1.3.5",
         "react-notifications-component": "^3.4.1",
         "react-scripts": "^4.0.3",
