--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
         "classnames": "^2.3.1",
+        "ethers": "^5.6.9",
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
         "moralis": "^1.5.8",
