--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
+        "@sentry/react": "^7.4.1",
+        "@sentry/tracing": "^7.4.1",
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
         "@types/react-modal": "^3.13.1",
