--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@sentry/tracing": "^7.4.1",
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
+        "@types/amplitude-js": "^8.16.1",
         "@types/react-modal": "^3.13.1",
         "@walletconnect/web3-provider": "^1.7.4",
+        "amplitude-js": "^8.18.5",
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
         "classnames": "^2.3.1",
