--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@chainsafe/dappeteer": "2.3.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
         "@sentry/react": "^7.4.1",
@@ -27,14 +28,12 @@
         "ethers": "^5.6.9",
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
-        "moralis": "^1.5.8",
         "node-sass": "^6.0.1",
         "puppeteer": "^13.5.1",
         "react": "^17.0.2",
         "react-dev-utils": "12.0.0",
         "react-dom": "^17.0.2",
         "react-modal": "^3.15.1",
-        "react-moralis": "^1.3.5",
         "react-notifications-component": "^3.4.1",
         "react-scripts": "^4.0.3",
         "typescript": "^4.5.2",
