--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
         "moralis": "^1.8.1",
+        "moralis-v1": "^1.12.0",
         "node-sass": "^6.0.1",
         "puppeteer": "^13.5.1",
         "react": "^17.0.2",
@@ -38,6 +39,7 @@
         "react-modal": "^3.15.1",
         "react-moralis": "^1.4.0",
         "react-notifications-component": "^3.4.1",
+        "react-router-dom": "5.3.0",
         "react-scripts": "^4.0.3",
         "typescript": "^4.5.2",
         "web3": "^1.7.1",
