--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "moralis-v1": "^1.12.0",
         "node-sass": "^6.0.1",
         "puppeteer": "^13.5.1",
+        "pure-react-carousel": "^1.30.1",
         "react": "^17.0.2",
         "react-dev-utils": "12.0.0",
         "react-dom": "^17.0.2",
@@ -41,6 +42,8 @@
         "react-notifications-component": "^3.4.1",
         "react-router-dom": "5.3.0",
         "react-scripts": "^4.0.3",
+        "react-twitter-embed": "^4.0.4",
+        "swiper": "^8.4.5",
         "typescript": "^4.5.2",
         "web3": "^1.7.1",
         "web3-eth-contract": "^1.7.1",
@@ -105,6 +108,7 @@
         "@types/puppeteer": "^5.4.5",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/react-slick": "^0.23.10",
         "@types/web3": "^1.2.2",
         "@typescript-eslint/eslint-plugin": "^4.25.0",
         "@typescript-eslint/parser": "^4.25.0",
