--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@storybook/testing-library": "^0.0.9",
         "@types/amplitude-js": "^8.16.1",
         "@types/react-modal": "^3.13.1",
+        "@types/react-router-dom": "^5.3.3",
         "@walletconnect/web3-provider": "^1.7.4",
         "amplitude-js": "^8.18.5",
         "bn.js": "^5.2.0",
