feat: add version

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Copy this file to .env and add private keys and addresses of your test account in rinkeby network
 # You should have DAI in FROM_ADDRESS to send it to TO_ADDRESS
 
+REACT_APP_VERSION=$npm_package_version
+
 FROM_PK=
 FROM_ADDRESS=
 
