--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@chainsafe/dappeteer": "2.3.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@gnosis.pm/safe-apps-provider": "^0.15.1",
+        "@gnosis.pm/safe-apps-react-sdk": "^4.6.2",
         "@metamask/detect-provider": "^1.2.0",
         "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
@@ -45,7 +47,7 @@
         "typescript": "^4.5.2",
         "web3": "^1.7.1",
         "web3-eth-contract": "^1.7.1",
-        "web3modal": "^1.9.5"
+        "web3modal": "^1.9.10"
     },
     "scripts": {
         "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version HTTPS=true react-scripts start",
