--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Copy this file to .env and add private keys and addresses of your test account in rinkeby network
+# Copy this file to .env and add private keys and addresses of your test account in goerli network
 # You should have DAI in FROM_ADDRESS to send it to TO_ADDRESS
 
 FROM_PK=
