--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@walletconnect/web3-provider": "^1.7.4",
         "amplitude-js": "^8.18.5",
+        "axios": "^1.2.1",
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
         "classnames": "^2.3.1",
