--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "node-sass": "^6.0.1",
         "puppeteer": "^13.5.1",
         "react": "^17.0.2",
+        "react-app-rewired": "^2.2.1",
         "react-dev-utils": "12.0.0",
         "react-dom": "^17.0.2",
         "react-modal": "^3.15.1",
@@ -52,10 +53,10 @@
         "web3modal": "^1.9.10"
     },
     "scripts": {
-        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version HTTPS=true react-scripts start",
-        "build": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts build",
+        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired start",
+        "build": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired build",
         "test": "mocha --require ts-node/register test/*.spec.ts --color --recursive --timeout 60000 --exit",
-        "eject": "react-scripts eject",
+        "eject": "react-app-rewired eject",
         "storybook": "start-storybook -p 6006 -s public",
         "release": "standard-version",
         "build-storybook": "build-storybook -s public"
