--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
+        "@rainbow-me/rainbowkit": "^0.8.0",
         "@sentry/react": "^7.4.1",
         "@sentry/tracing": "^7.4.1",
         "@storybook/react": "^6.4.19",
@@ -48,6 +49,7 @@
         "react-twitter-embed": "^4.0.4",
         "swiper": "^8.4.5",
         "typescript": "^4.5.2",
+        "wagmi": "^0.9.1",
         "web3": "^1.7.1",
         "web3-eth-contract": "^1.7.1",
         "web3modal": "^1.9.10"
