--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
-        "@sentry/react": "^7.4.1",
-        "@sentry/tracing": "^7.4.1",
+        "@sentry/react": "^7.25.0",
+        "@sentry/tracing": "^7.25.0",
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
         "@types/amplitude-js": "^8.16.1",
@@ -53,8 +53,8 @@
         "web3modal": "^1.9.10"
     },
     "scripts": {
-        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired start",
-        "build": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired build",
+        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts start",
+        "build": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts build",
         "test": "mocha --require ts-node/register test/*.spec.ts --color --recursive --timeout 60000 --exit",
         "eject": "react-app-rewired eject",
         "storybook": "start-storybook -p 6006 -s public",
