--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "ERC-20 Safe Transfer",
     "name": "ERC-20 Safe Transfer",
-    "description": "Stop sending tokens to wrong address or blockchain",
+    "description": "Do safe transfers to never lose tokens",
     "icons": [
         {
             "src": "favicon.ico",
