--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "@gnosis.pm/safe-apps-react-sdk": "^4.6.2",
         "@gnosis.pm/safe-apps-sdk": "^7.8.0",
         "@gnosis.pm/safe-apps-web3modal": "^17.0.4",
-        "@metamask/detect-provider": "^2.0.0",
-        "@metamask/providers": "^10.2.1",
+        "@metamask/detect-provider": "^1.2.0",
+        "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
         "@sentry/react": "^7.25.0",
@@ -27,14 +27,12 @@
         "@types/react-modal": "^3.13.1",
         "@types/react-router-dom": "^5.3.3",
         "@walletconnect/web3-provider": "^1.8.0",
-        "@web3modal/ethereum": "^2.0.0",
-        "@web3modal/react": "^2.0.0",
         "amplitude-js": "^8.18.5",
         "axios": "^1.2.1",
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
         "classnames": "^2.3.1",
-        "ethers": "^5.7.2",
+        "ethers": "^5.6.9",
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
         "node-sass": "^6.0.1",
@@ -50,10 +48,9 @@
         "react-twitter-embed": "^4.0.4",
         "swiper": "^8.4.5",
         "typescript": "^4.5.2",
-        "wagmi": "^0.10.12",
         "web3": "^1.7.1",
         "web3-eth-contract": "^1.7.1",
-        "web3modal": "1.9.9"
+        "web3modal": "^1.9.10"
     },
     "scripts": {
         "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts start",
@@ -88,11 +85,18 @@
             }
         ]
     },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-    ],
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "devDependencies": {
         "@storybook/addon-actions": "^6.4.19",
         "@storybook/addon-essentials": "^6.4.19",
