--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
         "@gnosis.pm/safe-apps-react-sdk": "^4.6.2",
         "@gnosis.pm/safe-apps-sdk": "^7.8.0",
         "@gnosis.pm/safe-apps-web3modal": "^17.0.4",
-        "@metamask/detect-provider": "^1.2.0",
-        "@metamask/providers": "^9.0.0",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
         "@sentry/react": "^7.25.0",
@@ -32,7 +30,7 @@
         "bn.js": "^5.2.0",
         "chai": "^4.3.6",
         "classnames": "^2.3.1",
-        "ethers": "^5.6.9",
+        "ethers": "^5.7.2",
         "jest": "26.6.0",
         "jsonwebtoken": "^8.5.1",
         "node-sass": "^6.0.1",
@@ -48,10 +46,10 @@
         "react-twitter-embed": "^4.0.4",
         "swiper": "^8.4.5",
         "typescript": "^4.5.2",
+        "wagmi": "^0.11.4",
         "web3": "^1.7.1",
         "web3-eth-contract": "^1.7.1",
-        "web3-eth-ens": "^1.8.2",
-        "web3modal": "^1.9.10"
+        "web3-eth-ens": "^1.8.2"
     },
     "scripts": {
         "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts start",
@@ -86,18 +84,11 @@
             }
         ]
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+    ],
     "devDependencies": {
         "@storybook/addon-actions": "^6.4.19",
         "@storybook/addon-essentials": "^6.4.19",
