--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@gnosis.pm/safe-apps-provider": "^0.15.1",
         "@gnosis.pm/safe-apps-react-sdk": "^4.6.2",
         "@gnosis.pm/safe-apps-sdk": "^7.8.0",
+        "@gnosis.pm/safe-apps-wagmi": "^2.1.0",
         "@gnosis.pm/safe-apps-web3modal": "^17.0.4",
         "@mui/icons-material": "^5.5.0",
         "@mui/material": "^5.8.5",
@@ -53,8 +54,8 @@
         "web3-eth-ens": "^1.8.2"
     },
     "scripts": {
-        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts start",
-        "build": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-scripts build",
+        "start": "TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired start",
+        "build": "HTTPS=true TSC_COMPILE_ON_ERROR=true REACT_APP_VERSION=$npm_package_version react-app-rewired build",
         "test": "mocha --require ts-node/register test/*.spec.ts --color --recursive --timeout 60000 --exit",
         "eject": "react-app-rewired eject",
         "storybook": "start-storybook -p 6006 -s public",
